run and debug are check box and working